test/classes/diten/passSubClassByRef.good
passSubClassByRef.chpl:6: error: value from coercion passed to ref formal 'obj'
